--- a/Component Design Exercise/src/App.module.css
+++ b/Component Design Exercise/src/App.module.css
@@ -1,8 +1,7 @@
-.mainContainer
-{
+.mainContainer {
   width: 100vw;
   min-height: 100vh;
-  padding: 20px;
-  color: #ffffff;
-  background-color: #000f1c;
+  padding: 10px;
+  color:aliceblue;
+  background-color: black; 
 }
