--- a/Component Design Exercise/src/components/MissionAction.module.css
+++ b/Component Design Exercise/src/components/MissionAction.module.css
@@ -1,17 +1,12 @@
-.button
-{
+.button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 120px;
-  height: 40px;
+  color:whitesmoke;
+  background-color: darkblue;
+  border: 2px solid green;
+  width: 150px;
+  height: 30px;
   margin-bottom: 10px;
-  color: #ffffff;
-  border: 2px solid #62ff62;
-  background-color: transparent;
 }
 
-.button:last-child
-{
-  margin-right: 0;
-}
