--- a/Component Design Exercise/src/components/MissionCard.module.css
+++ b/Component Design Exercise/src/components/MissionCard.module.css
@@ -1,9 +1,9 @@
-.header
-{
-  margin-bottom: 20px;
+.header {
+  color: goldenrod;
+  margin-bottom: 10px;
 }
 
-.detail
-{
+.detail {
+  color: gray;  
   margin-bottom: 10px;
 }
